--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,21 +1,48 @@
 
 
 <div class="content">
-    <div>
-        <h2>Welcome to the forest</h2>
-    </div>
-    <div>
-        <a mat-button [routerLink]="'/test'"> Start Trail! </a>
+    <div *ngIf="mode=='start'"> 
+            <h2>Welcome to the Forest</h2>
+        </div>
+        <div *ngIf="mode=='start'"> 
+            <a mat-button (click)="onStart()"> Start Trail! </a>
+        </div>
+
+
+    <div *ngIf="mode=='quest'">
+        <h2 class="text-center font-weight-normal">{{quest.name}}</h2>
+        <hr />
+      
+ 
+          <div *ngFor="let question of filteredQuestions;">
+            <div class="badge badge-info">Question {{pager.index + 1}} of {{pager.count}}.</div>
+            <!-- <div *ngIf="config.duration" class="badge badge-info float-right">Time: {{ellapsedTime}} / {{duration}}</div> -->
+            <h3 class="font-weight-normal">
+                <!-- {{pager.index + 1}}. -->
+              <span>{{question.name}}</span>
+            </h3>
+           <!--  <div class="row text-left options">
+              <div class="col-6" *ngFor="let option of question.options">
+                <div class="option">
+                  <label class="font-weight-normal" [attr.for]="option.id">
+                    <input id="{{option.id}}" type="checkbox" [(ngModel)]="option.selected" (change)="onSelect(question, option);" /> {{option.name}}
+                  </label>
+                </div>
+              </div>
+            </div> -->
+          </div>
+          <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+          <hr />
+          <div class="text-center">
+           <!--  <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(0);">First</button>
+            <button class="btn btn -default" *ngIf="config.allowBack" (click)="goTo(pager.index - 1);">Prev</button> -->
+            <!-- <button class="btn btn-primary" (click)="goTo(pager.index + 1);">Next</button> -->
+            <a mat-button (click)="goTo(pager.index + 1);"> Next</a>
+            <!-- <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(pager.count - 1);">Last</button> -->
+           
+          </div>
+       
+
     </div>
 </div>
 
-<!-- <div class="center">
-    <div layout="row"   style="height: 100vh">
-        <div flex="15">
-            <a mat-button [routerLink]="'/accounts'"> Start Trail! </a>
-        </div>
-  
-        <div flex="15">Second line</div>
-    </div>
-  </div>
- -->
