--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
               </div>
             </div> -->
           </div>
-          <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+          <input type="text" class="form-control" placeholder="XXXX" aria-label="Answer" aria-describedby="basic-addon1">
           <hr />
           <div class="text-center">
            <!--  <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(0);">First</button>
