--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,12 +25,12 @@
     <mat-sidenav #sidenav>
       <mat-nav-list>
   
-        <a mat-list-item [routerLink]="'/accounts'"> Accounts </a>
-        <a mat-list-item [routerLink]="'/create-account'"> Create Account </a>
-        <a mat-list-item [routerLink]="'/contacts'"> Contacts </a>
+        <a mat-list-item [routerLink]="'/dashboard'"> Dashboard </a>
+        <a mat-list-item [routerLink]="'/test'"> Test </a>
+<!--         <a mat-list-item [routerLink]="'/contacts'"> Contacts </a>
         <a mat-list-item [routerLink]="'/create-contact'"> Create Contact </a>
         <a mat-list-item [routerLink]="'/activities'"> Activities </a>
-        <a mat-list-item [routerLink]="'/create-activity'"> Create Activity </a>
+        <a mat-list-item [routerLink]="'/create-activity'"> Create Activity </a> -->
         <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
   
       </mat-nav-list>
