--- a/src/app/test1/test1.component.html
+++ b/src/app/test1/test1.component.html
@@ -4,6 +4,9 @@
 <!--         <div class="title t1">Welcome</div>
         <div class="title t2">to the</div>
         <div style="color:white"class="title t2">Forest</div> -->
+        <img src="assets/dividers-1.png"  width="500" height="50">
+        <img src="assets/dividers-2.png"  width="500" height="100">
+        <img src="assets/dividers-3.png"  width="500" height="100">
     </div>
 
     <div class="column-2 box-1">
