--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -17,3 +17,9 @@ a {
     flex-direction: column;
     align-items: center;
   }
+
+
+  img {
+    background-color: blue;
+    align-items: center;
+  }
