--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,15 +1,19 @@
-<div class="container2">
-    <div class="column-1 box">
-        <!-- <div>sdsfsdfsd</div> -->
-        <div class="title t1">Welcome</div>
-        <div class="title t2">to the</div>
-        <div class="title t3">Forest</div>
+<div class="container">
+    <div class="text-center bodyx">
+        <form class="form-signin">
+            <img class="mb-4" src="../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <div class="checkbox mb-3">
+                <label>
+                <input type="checkbox" value="remember-me"> Remember me
+                </label>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
+        </form>
     </div>
-
-    <div class="column-2 box-1">
-          
-        <div style="color:white" class="title t1">Welcome</div>
-        <div style="color:white" class="title t2">to the</div>
-        <div style="color:white"  class="title t3">Forest</div>
-    </div>
- </div>
+</div>
