--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -1,116 +1,45 @@
-/* .content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
-  } */
-
-  body {
-    margin: 0;
-   // padding: 1rem;
-    max-width: 1200px;
-   //  margin: 0px auto;
-
-   height: 100%;
-   
-  }
- 
-  .container2{
-    display:flex;
-    height: 100%;
-    min-height: 100%;
-    // background-color: black;
+html,
+.bodyx {
+  height: 100%;
 }
 
-.column-1 {
- // flex-shrink: 0; /* shrinks to 0 to apply 70% width*/
-  flex-basis: 70%; /* sets initial width to 70% */
-}
 
-.column-2 {
-    flex-shrink: 0; /* shrinks to 0 to apply 70% width*/
-    flex-basis: 30%; /* sets initial width to 70% */
-}
-
-.column-3 {
-// flex-shrink: 0; /* shrinks to 0 to apply 70% width*/
-    flex-basis: 30%; /* sets initial width to 70% */
-}
-
-.column-4 {
-    //  flex-shrink: 0; /* shrinks to 0 to apply 70% width*/
-    flex-basis: 70%; /* sets initial width to 70% */
-}
-   
-
-.box {
-  //background-color: #98ff98 ;
-  background-color: #36454f;
-  //padding: 10px;
- // border-radius: 12px;
-//  border: 2px solid rgb(116, 113, 113);
- // margin: 1rem;
-  box-shadow: 1px 1px 1px #000;
-  color: white;
-  justify-content: center;
- // align-items: center;
-
-  text-align: center;
-  font-family: sans-serif;
-  font-size: 36px;
-  padding: 30px;
-  
+.bodyx {
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
 }
 
- 
-.box-1 {
-    background-color: white;
-   // padding: 10px;
-  //  border-radius: 12px;
-  //  border: 2px solid rgb(116, 113, 113);
-    //margin: 1rem;
-    box-shadow: 1px 1px 1px #000;
-    justify-content: center;
- 
-    text-align: center;
-   // font-family: sans-serif;
-    font-size: 36px;
-    padding: 30px;
-    
-    display: flex;
-    flex-direction: column;
-  }
-
-  .title {
-      margin: 15px;
-  }
-
-  .t1 {
-    text-align: right;
-  }
-
-  .t2 {
-    text-align: right;
-  }
-
-  .t3 {
-    text-align: right;
-    color: #98ff98;
-  }
-
-  .t4 {
-    text-align: left;
-  }
-
-  .t5 {
-    text-align: left;
-  }
-
-  .t6 {
-    text-align: left;
-    color: #98ff98;
-  }
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
