--- a/src/app/test1/test1.component.html
+++ b/src/app/test1/test1.component.html
@@ -1,18 +1,28 @@
-<div class="container2">
-    <div class="column-1 box">
-   
-<!--         <div class="title t1">Welcome</div>
-        <div class="title t2">to the</div>
-        <div style="color:white"class="title t2">Forest</div> -->
-        <img src="assets/dividers-1.png"  width="500" height="50">
-        <img src="assets/dividers-2.png"  width="500" height="100">
-        <img src="assets/dividers-3.png"  width="500" height="100">
+<body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="masthead mb-auto">
+    <div class="inner">
+      <h3 class="masthead-brand">Cover</h3>
+      <nav class="nav nav-masthead justify-content-center">
+        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Contact</a>
+      </nav>
     </div>
+  </header>
 
-    <div class="column-2 box-1">
-          
-        <div  class="title t4">Welcome</div>
-        <div  class="title t5">to the</div>
-        <div  class="title t6">Forest</div>
+  <main role="main" class="inner cover">
+    <h1 class="cover-heading">Cover your page.</h1>
+    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <p class="lead">
+      <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+    </p>
+  </main>
+
+  <footer class="mastfoot mt-auto">
+    <div class="inner">
+      <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
     </div>
- </div>
+  </footer>
+</div>
+</body>
