--- a/src/app/test1/test1.component.scss
+++ b/src/app/test1/test1.component.scss
@@ -1,116 +1,106 @@
-/* .content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
-  } */
+/*
+ * Globals
+ */
 
-  body {
-    margin: 0;
-   // padding: 1rem;
-    max-width: 1200px;
-   //  margin: 0px auto;
-
-   height: 100%;
-   
-  }
- 
-  .container2{
-    display:flex;
-    height: 100%;
-    min-height: 100%;
-    // background-color: black;
+/* Links */
+a,
+a:focus,
+a:hover {
+  color: #fff;
 }
 
-.column-1 {
- // flex-shrink: 0; /* shrinks to 0 to apply 70% width*/
-  flex-basis: 70%; /* sets initial width to 70% */
+/* Custom default button */
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritance from `body` */
+  background-color: #fff;
+  border: .05rem solid #fff;
 }
 
-.column-2 {
-    flex-shrink: 0; /* shrinks to 0 to apply 70% width*/
-    flex-basis: 30%; /* sets initial width to 70% */
+
+/*
+ * Base structure
+ */
+
+html,
+body {
+  height: 100%;
+  background-color: #333;
 }
 
-.column-3 {
-// flex-shrink: 0; /* shrinks to 0 to apply 70% width*/
-    flex-basis: 30%; /* sets initial width to 70% */
-}
-
-.column-4 {
-    //  flex-shrink: 0; /* shrinks to 0 to apply 70% width*/
-    flex-basis: 70%; /* sets initial width to 70% */
-}
-   
-
-.box {
-  //background-color: #98ff98 ;
-  background-color: #36454f;
-  //padding: 10px;
- // border-radius: 12px;
-//  border: 2px solid rgb(116, 113, 113);
- // margin: 1rem;
-  box-shadow: 1px 1px 1px #000;
-  color: white;
-  justify-content: center;
- // align-items: center;
-
-  text-align: center;
-  font-family: sans-serif;
-  font-size: 36px;
-  padding: 30px;
-  
+body {
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  color: #fff;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
- 
-.box-1 {
-    background-color: white;
-   // padding: 10px;
-  //  border-radius: 12px;
-  //  border: 2px solid rgb(116, 113, 113);
-    //margin: 1rem;
-    box-shadow: 1px 1px 1px #000;
-    justify-content: center;
- 
-    text-align: center;
-   // font-family: sans-serif;
-    font-size: 36px;
-    padding: 30px;
-    
-    display: flex;
-    flex-direction: column;
-  }
+.cover-container {
+  max-width: 42em;
+}
 
-  .title {
-      margin: 15px;
-  }
 
-  .t1 {
-    text-align: right;
-  }
+/*
+ * Header
+ */
+.masthead {
+  margin-bottom: 2rem;
+}
 
-  .t2 {
-    text-align: right;
-  }
+.masthead-brand {
+  margin-bottom: 0;
+}
 
-  .t3 {
-    text-align: right;
-    color: #98ff98;
-  }
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, .5);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+}
 
-  .t4 {
-    text-align: left;
-  }
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
+}
 
-  .t5 {
-    text-align: left;
-  }
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
 
-  .t6 {
-    text-align: left;
-    color: #98ff98;
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+@media (min-width: 48em) {
+  .masthead-brand {
+    float: left;
   }
+  .nav-masthead {
+    float: right;
+  }
+}
+
+
+/*
+ * Cover
+ */
+.cover {
+  padding: 0 1.5rem;
+}
+.cover .btn-lg {
+  padding: .75rem 1.25rem;
+  font-weight: 700;
+}
+
+
+/*
+ * Footer
+ */
+.mastfoot {
+  color: rgba(255, 255, 255, .5);
+}
