--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,58 +1,52 @@
 
-
-<div class="content">
-<!--     <div *ngIf="mode=='start'"> 
-        <h2>Welcome to the Forest</h2>
-    </div>
-    <div *ngIf="mode=='start'"> 
-        <a mat-button (click)="onStart()"> Start Trail! </a>
-    </div> -->
-
-
-    <div *ngIf="mode=='quest'">
+<div class="container">
+  <h4 class="d-flex justify-content-between align-items-center mt-4">
+    <span class="text-muted">Time elapsed</span>
+    <span class="badge badge-secondary badge-pill">Hint</span>
+  </h4>
+  <div class="text-center bodyx">
+    <div *ngIf="mode == 'quest'">
       <!--    <h2 class="text-center font-weight-normal">{{quest.name}}</h2>-->
-        <img src="assets/border-top.png"  width="350" height="70">
-      
-          <div *ngFor="let question of filteredQuestions;">
-            <!-- <div class="badge badge-info">Question {{pager.index + 1}} of {{pager.count}}.</div> -->
-            <!-- <div *ngIf="config.duration" class="badge badge-info float-right">Time: {{ellapsedTime}} / {{duration}}</div> -->
-            <h3 class="font-weight-normal">
-                <!-- {{pager.index + 1}}. -->
-              <span>{{question.name}}</span>
-            </h3>
-           <!--  <div class="row text-left options">
-              <div class="col-6" *ngFor="let option of question.options">
-                <div class="option">
-                  <label class="font-weight-normal" [attr.for]="option.id">
-                    <input id="{{option.id}}" type="checkbox" [(ngModel)]="option.selected" (change)="onSelect(question, option);" /> {{option.name}}
-                  </label>
-                </div>
-              </div>
-            </div> -->
-          </div>
-     
-          <img src="assets/border-bottom.png"  width="400" height="80">
-          <div class="text-center">
-           <!--  <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(0);">First</button>
-            <button class="btn btn -default" *ngIf="config.allowBack" (click)="goTo(pager.index - 1);">Prev</button> -->
-            <!-- <button class="btn btn-primary" (click)="goTo(pager.index + 1);">Next</button> -->
-            
-            <hr>
-            <div class="d-flex justify-content-center">
-              <input type="text" style="width:100px" class="form-control" placeholder="XXXX" name="userAnswer" (ngModelChange)="onChange()" [ngModel]="userAnswer">
-              <a style="margin-left: 20px" mat-button (click)="onAnswer()"> Enter</a>
-            </div>
+      <img src="assets/border-top.png" height="60" />
 
-            
-            
-            <!-- <a mat-button (click)="goTo(pager.index + 1);"> Enter</a> -->
-            <!-- <button class="btn btn-default" *ngIf="config.allowBack" (click)="goTo(pager.count - 1);">Last</button> -->
-           
+      <div *ngFor="let question of filteredQuestions">
+       
+
+        <form class="form-signin mb-3">
+          <h1 class="font-weight-normal mb-8">{{ question.name }}</h1>
+
+
+          <input
+            type="text"
+            class="form-control mb-3"
+            placeholder="Your Answer"
+            name="userAnswer"
+            [(ngModel)]="userAnswer"
+            required autofocus
+          />
+
+          <button class="btn btn-lg btn-block" type="submit" (click)="onAnswer()">
+            Enter
+          </button>
+
+          <div
+            *ngIf="correct == false"
+            class="text-center mt-3"
+            style="color: red; font-weight: bold"
+          >
+            {{ errorAnswer }} is wrong!
           </div>
-        
-          <div *ngIf="correct == false" class="text-center" style="color: red; font-weight: bold;">
-            {{userAnswer}} is wrong!
-          </div>
+        </form>
+      </div>
+
+      <img src="assets/border-bottom.png" height="60" />
     </div>
+    <div *ngIf="mode == 'results'">
+        <h1 class="font-weight-normal mb-8">You finished!!!</h1>
+        <button class="btn btn-lg btn-block" type="submit" (click)="onResults()">
+          Results
+        </button>
+    </div>
+  </div>
 </div>
 
