--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,20 +1,19 @@
 
 <div class="container">
   <h4 class="d-flex justify-content-between align-items-center mt-4">
-    <span class="text-muted">Time elapsed</span>
-    <span class="badge badge-secondary badge-pill">Hint</span>
+    <span class="text-muted">Time elapsed: {{ ellapsedTime }}</span>    
+    <button type="button" class="btn btn-primary btn-sm" (click)="hintClick()">
+        Hint <span class="badge badge-light">{{ this.quest.hintCount }}</span>
+    </button>
   </h4>
   <div class="text-center bodyx">
     <div *ngIf="mode == 'quest'">
-      <!--    <h2 class="text-center font-weight-normal">{{quest.name}}</h2>-->
       <img src="assets/border-top.png" height="60" />
 
       <div *ngFor="let question of filteredQuestions">
        
-
         <form class="form-signin mb-3">
           <h1 class="font-weight-normal mb-8">{{ question.name }}</h1>
-
 
           <input
             type="text"
