--- a/src/app/splashscreen/splashscreen.component.html
+++ b/src/app/splashscreen/splashscreen.component.html
@@ -10,11 +10,53 @@
     </div>
 
     <div class="column-2 box-1">
-          
-        <div  class="title t4">Welcome</div>
-        <div  class="title t5">to the</div>
-        <div  class="title t6">Forest</div>
-        <button class="button" mat-stroked-button (click)="onClick()" >Enter</button>
+
+        <div  class="title">Welcome</div>
+        <div  class="title">to the</div>
+        <div  class="title highlight">Forest</div>
+
+        <!-- <form class="form-signin"> -->
+        <form class="form-signin needs-validation" [formGroup]="frmRegister" (ngSubmit)="SaveTeam(frmRegister.value)" novalidate>
+            <!-- <form class="needs-validation" novalidate> -->
+                       
+            <h2 class="mb-3 font-weight-normal">Please sign in</h2>
+            <!--<label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
+            <label for="inputEmail">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
+             <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required> -->
+            
+            <div class="form-group mb-3">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" formControlName="regEmail" placeholder="you@example.com" required autofocus>
+                <div class="invalid-feedback">
+                  Please enter a valid email address for shipping updates.
+                </div>
+              </div>
+  
+              <div class="form-group mb-3">
+                <label for="address">Team Name</label>
+                <input type="text" class="form-control" id="name" formControlName="regName" placeholder="Team Name" required>
+                <div class="invalid-feedback">
+                  Please enter your team name.
+                </div>
+    <!--             <div *ngIf="f.lastName.errors" class="invalid-feedback">
+                    <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+                </div> -->
+              </div>
+  
+              <div class="form-group mb-3">
+                <label for="address2">Number of players</label>
+                <input type="text" class="form-control" id="players" formControlName="regNumber" placeholder="2" required>
+              </div>
+
+            <div class="form-group mb-3">
+                <button class="btn button" type="submit">Sign in</button>                        
+            </div>
+        </form>
 
     </div>
  </div>
