--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
   </h4>
   <div class="text-center bodyx">
     <div *ngIf="mode == 'quest'">
-      <img src="assets/border-top.png" height="60" />
+      <!-- <img src="assets/border-top.png" height="60" /> -->
 
       <div *ngFor="let question of filteredQuestions">
        
@@ -38,7 +38,7 @@
         </form>
       </div>
 
-      <img src="assets/border-bottom.png" height="60" />
+      <!-- <img src="assets/border-bottom.png" height="60" /> -->
     </div>
     <div *ngIf="mode == 'results'">
         <h1 class="font-weight-normal mb-8">You finished!!!</h1>
